2006-12-19  John Sullivan  <sullivan@apple.com>

        Reviewed by Darin

        - fix for unrepro infinite recursion bug:
        <rdar://problem/4448181> CrashTracer: 154 crashes in Safari at com.apple.AppKit: 
        -[NSView isDescendantOf:] + 24; infinite recursion in makeFirstResponder logic

        * WebView/WebView.mm:
        added becomingFirstResponder BOOL to private struct
        (-[WebView becomeFirstResponder]):
        use _private->becomingFirstResponder to guard against infinite recursion; complain on
        debug builds if we run into this problem

2006-12-19  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin.

        <rdar://problem/4891774> Local WebCore/WebBrowser builds fail in 9A328 due to warning about ObjC-2.0 language features

        * WebKit.xcodeproj/project.pbxproj:

2006-12-18  Ada Chan  <adachan@apple.com>

        Reviewed by Adam.
        
        Moved canRunBeforeUnloadConfirmPanel, runBeforeUnloadConfirmPanel, and closeWindowSoon
        from WebCoreFrameBridge to Chrome.

        * COM/ChromeClientWin.cpp:
        (ChromeClientWin::canRunBeforeUnloadConfirmPanel):
        (ChromeClientWin::runBeforeUnloadConfirmPanel):
        (ChromeClientWin::closeWindowSoon):
        * COM/ChromeClientWin.h:
        * WebCoreSupport/WebChromeClient.h:
        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::canRunBeforeUnloadConfirmPanel):
        (WebChromeClient::runBeforeUnloadConfirmPanel):
        (WebChromeClient::closeWindowSoon):
        * WebCoreSupport/WebFrameBridge.mm:

2006-12-18  Alice Liu  <alice.liu@apple.com>

        Reviewed by Adam.

        Have the Editor handle deletion instead of WebHTMLView

        * WebKitPrefix.h:
        Turned on WebCore deletion

        * WebView/WebHTMLViewInternal.h:
        Moved ownership of startNewKillRingSequence to the WebCore::Editor

        * WebView/WebHTMLView.m:
        (-[NSArray becomeFirstResponder]):