@@ -1,3 +1,12 @@
+2006-12-21  Mark Rowe  <bdash@webkit.org>
+
+        Reviewed by Geoff.
+
+        http://bugs.webkit.org/show_bug.cgi?id=11888
+        Bug 11888: REGRESSION (r18320): Web Inspector panes broken
+
+        * Drosera/debugger.js: Use removeProperty to reset a style property to its initial value.
+
 2006-12-18  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Beth Dakin.
