@@ -1,3 +1,13 @@
+2006-12-21  Mark Rowe  <bdash@webkit.org>
+
+        Reviewed by Geoff.
+
+        http://bugs.webkit.org/show_bug.cgi?id=11888
+        Bug 11888: REGRESSION (r18320): Web Inspector panes broken
+
+        * WebInspector/webInspector/inspector.js: Use removeProperty to reset a style property to its
+        initial value.  Bail out early from updateNodePane if Inspector has not yet been set.
+
 2006-12-19  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Darin
